# pg_walrus

./: CLAUDE.md  CONVERSION_PROPOSAL.md  Cargo.toml  ENHANCEMENTS_PROPOSAL.md  LICENSE  PG_WALRUS_SUMMARY.md  README.md  pg_walrus.control
.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
.claude/hooks/: enforce-constitution.py
.claude/output-styles/: no-deferral.md
.specify/memory/: constitution.md
features/: 01-core-extension.md  02-auto-shrink.md  03-sql-functions.md  04-history-table.md  05-dry-run-mode.md  06-rate-limiting.md  07-notify-events.md  08-prometheus-metrics.md  09-smart-algorithms.md  10-time-profiles.md  11-wal-rate-tracking.md  12-shared-memory.md  README.md
pg_walsizer/: LICENSE  Makefile  README.md  pg_walsizer.control  walsizer.c  walsizer.h
specs/001-pgrx-core-rewrite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auto-shrink/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-history-table/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-sql-observability-functions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-dry-run-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: algorithm.rs  config.rs  functions.rs  guc.rs  history.rs  lib.rs  rate_limit_tests.rs  shmem.rs  stats.rs  tests.rs  worker.rs
(+41 files in other folders)
